--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -38,8 +38,10 @@
   <meta name="twitter:site" content="@FLEAR_radio">
   <meta name="twitter:creator" content="@FLEAR_radio">
   {{ if .Title }}
-  <meta name="twitter:title" content="{{ .Title }} ">
+  <meta name="twitter:title" content="{{ .Title }}">
+  <meta name="og:title" content="{{ if .Title }}{{ .Title }}{{else}}{{.Site.Title}}{{end}}">
   {{end}}
+  <meta name="og:url" content="{{ .Permalink | safeURL }}">
   <meta name="description" content="{{if .Description}}{{ .Description }}{{else}}{{.Site.Params.Description}}{{end}}">
   <meta name="twitter:description" content="{{if .Description}}{{ .Description }}{{else}}{{.Site.Params.Description}}{{end}}">
   <script defer src="/_vercel/insights/script.js"></script>
