--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -19,65 +19,65 @@
   <meta name="supported-color-schemes" content="light dark">
   <meta name="theme-color" content="{{ if .Params.themecolor }}#{{ .Params.themecolor}}{{ else }}#000000{{ end }}">
 
-  <meta name="og:site_name" content="FLEAR">
-  <meta name="twitter:site" content="@FLEAR_radio">
-  <meta name="twitter:creator" content="@FLEAR_radio">
+  <meta property="og:site_name" content="FLEAR">
+  <meta property="twitter:site" content="@FLEAR_radio">
+  <meta property="twitter:creator" content="@FLEAR_radio">
   <meta property="og:type" content="website" />
-  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:card" content="summary_large_image">
 
   {{if .Params.image_header}}
-    <meta name="twitter:image" content="{{.Params.image_header}}">
+    <meta property="twitter:image" content="{{.Params.image_header}}">
     <meta property="og:image" content="{{.Params.image_header}}">
   {{ else if .IsHome }}
-    <meta name="twitter:image" content="/images/logo-header-light.png">
+    <meta property="twitter:image" content="/images/logo-header-light.png">
     <meta property="og:image" content="/images/logo-header-light.png">
   {{else}}
     {{ $tags := .Params.tags}}
     {{ if .Params.social_image_url }}
       {{ $socialURL := printf "https://flear.org/api/card?%s" (querify "title" .Title "imgUrl" .Params.social_image_url ) }}
-      <meta name="twitter:image" {{ printf "content=%q" $socialURL |  safeHTMLAttr}}>
+      <meta property="twitter:image" {{ printf "content=%q" $socialURL |  safeHTMLAttr}}>
       <meta property="og:image" {{ printf "content=%q" $socialURL |  safeHTMLAttr}}>
     {{else if .Title}}
       {{ $socialURL := printf "https://flear.org/api/card?%s" (querify "title" .Title) }}
-      <meta name="twitter:image" {{ printf "content=%q" $socialURL |  safeHTMLAttr}}>
+      <meta property="twitter:image" {{ printf "content=%q" $socialURL |  safeHTMLAttr}}>
       <meta property="og:image" {{ printf "content=%q" $socialURL |  safeHTMLAttr}}>
     {{ else }}
-      <meta name="twitter:image" content="/images/logo-header-light.png">
+      <meta property="twitter:image" content="/images/logo-header-light.png">
       <meta property="og:image" content="/images/logo-header-light.png">
     {{end}}
   {{end}}
 
   {{ if .Title }}
     <title>FLEAR: {{ .Title }}</title>
-    <meta name="og:title" content="{{ .Title }}">
-    <meta name="twitter:title" content="{{ .Title }}">
+    <meta property="og:title" content="{{ .Title }}">
+    <meta property="twitter:title" content="{{ .Title }}">
   {{ else if .Site.Title }}
     <title>FLEAR: {{ .Site.Title }}</title>
-    <meta name="og:title" content="{{.Site.Title}}">
-    <meta name="twitter:title" content="{{.Site.Title}}">
+    <meta property="og:title" content="{{.Site.Title}}">
+    <meta property="twitter:title" content="{{.Site.Title}}">
   {{ else }}
     <title>FLEAR - Free and Libre Engineers for Amateur Radio</title>
-    <meta name="og:title" content="FLEAR - Free and Libre Engineers for Amateur Radio">
-    <meta name="twitter:title" content="FLEAR - Free and Libre Engineers for Amateur Radio">
+    <meta property="og:title" content="FLEAR - Free and Libre Engineers for Amateur Radio">
+    <meta property="twitter:title" content="FLEAR - Free and Libre Engineers for Amateur Radio">
   {{end}}
 
   {{ if .Permalink }}
-    <meta name="og:url" content="{{ .Permalink }}">
-    <meta name="twitter:url" content="{{ .Permalink }}">
+    <meta property="og:url" content="{{ .Permalink }}">
+    <meta property="twitter:url" content="{{ .Permalink }}">
   {{end}}
 
   {{if .Description}}
-    <meta name="og:description" content="{{ .Description }}">
-    <meta name="description" content="{{ .Description }}">
-    <meta name="twitter:description" content="{{ .Description }}">
+    <meta property="og:description" content="{{ .Description }}">
+    <meta property="description" content="{{ .Description }}">
+    <meta property="twitter:description" content="{{ .Description }}">
   {{else if .Site.Params.Description}}
-    <meta name="og:description" content="{{ .Site.Params.Description }}">
-    <meta name="description" content="{{ .Site.Params.Description }}">
-    <meta name="twitter:description" content="{{ .Site.Params.Description }}">
+    <meta property="og:description" content="{{ .Site.Params.Description }}">
+    <meta property="description" content="{{ .Site.Params.Description }}">
+    <meta property="twitter:description" content="{{ .Site.Params.Description }}">
   {{else}}
-    <meta name="og:description" content="FLEAR is an open-source and open-standards incubator for Ham Radio">
-    <meta name="description" content="FLEAR is an open-source and open-standards incubator for Ham Radio">
-    <meta name="twitter:description" content="FLEAR is an open-source and open-standards incubator for Ham Radio">
+    <meta property="og:description" content="FLEAR is an open-source and open-standards incubator for Ham Radio">
+    <meta property="description" content="FLEAR is an open-source and open-standards incubator for Ham Radio">
+    <meta property="twitter:description" content="FLEAR is an open-source and open-standards incubator for Ham Radio">
   {{end}}
 
   <script defer src="/_vercel/insights/script.js"></script>
