Cleaned up default image for open-graph to use the logo instad of nil

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -42,8 +42,8 @@
       <meta property="twitter:image" {{ printf "content=%q" $socialURL |  safeHTMLAttr}}>
       <meta property="og:image" {{ printf "content=%q" $socialURL |  safeHTMLAttr}}>
     {{ else }}
-      <meta property="twitter:image" content="/images/logo-header-light.png">
-      <meta property="og:image" content="/images/logo-header-light.png">
+      <meta property="twitter:image" content="https://flear.org/images/logo.png">
+      <meta property="og:image" content="https://flear.org/images/logo.png">
     {{end}}
   {{end}}
 
