--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -50,18 +50,6 @@
       </section>
     </article>
   </div>
-  <div class='col-md-4'>
-    <nav class='menu tags'>
-      <span class="menu-heading">Recent Posts</span>
-      {{ $hereLink := .Permalink }}
-      {{ range .Site.Pages }}
-         {{ range .Pages }}
-            <a href='{{ .RelPermalink }}' class='menu-item tag{{ if (eq .Permalink $hereLink) }} selected{{ end }}' data-slug='{{ .Title}}' title="{{ .Title}}">{{ .Title}}</a>
-         {{ end }}
-      {{ end }}
-    </nav>
-    <br>
-    {{ partial "microblog.html" . }}
-  </div>
+  {{ partial "side_menu_single.html" . }}
 </div>
 {{ partial "bottom_single.html" . }}
