--- a/layouts/projects/single.html
+++ b/layouts/projects/single.html
@@ -2,31 +2,7 @@
 <div class='row'>
   <div class='col-md-8'>
     <article class='post'>
-      <header class='post-header'>
-        <section class='post-meta text-muted'>
-          <ul class='list-inline'>
-            <li>
-              <i class='fa fa-calendar'></i>
-              <time class='post-date' datetime='{{  .Date.Format "2020-09-10" }}'> {{  .Date.Format "January 2 2006" }} </time>
-            </li>
-            <li>
-              <a class='fa-solid fa-book-open' href='{{ .Permalink }}'>
-                <span class='hidden'>Book icon</span>
-              </a>
-              <a href='{{ .Permalink }}'>Reading time: {{ .ReadingTime }} minute{{ if (ne .ReadingTime 1) }}s{{ end }}</a>
-            </li>
-            <li>
-              <i class='fa fa-folder-open'></i>
-              {{ $tags := .Params.tags}}
-              {{ with $tags }}
-                {{ range . }}
-                  <a href="{{ "/tags/" | relLangURL }}{{ . | urlize }}">{{ . }}</a>
-                {{ end }}
-              {{ end }}
-            </li>
-          </ul>
-        </section>
-      </header>
+      {{ partial "post_header_single.html" . }}
       <section class='post-content'>
         {{ .Content }}
 
