--- a/layouts/taxonomy/tag.html
+++ b/layouts/taxonomy/tag.html
@@ -7,35 +7,7 @@
  {{ range $index, $element := $paginator.Pages }}
 
  <article class='post'>
-   <header class='post-header'>
-     <h2 class='post-title'>
-       <a href="{{ .Permalink }}">{{ .Title}}</a>
-       {{ if .Params.link }} &mdash; <a href="{{.Params.link}}">🔗</a>{{end}}
-     </h2>
-     <section class='post-meta text-muted'>
-       <ul class='list-inline'>
-         <li>
-           <i class='fa fa-calendar'></i>
-           <time class='post-date' datetime='{{  .Date.Format "2020-09-10" }}'> {{  .Date.Format "January 2 2006" }} </time>
-         </li>
-         <li>
-           <a class='fa-solid fa-book-open' href='{{ .Permalink }}'>
-             <span class='hidden'>Book icon</span>
-           </a>
-           <a href='{{ .Permalink }}'>Reading time: {{ .ReadingTime }} minute{{ if (ne .ReadingTime 1) }}s{{ end }}</a>
-         </li>
-         <li>
-           <i class='fa fa-folder-open'></i>
-           {{ $tags := .Params.tags}}
-           {{ with $tags }}
-             {{ range . }}
-               <a href="{{ "/tags/" | relLangURL }}{{ . | urlize }}">{{ . }}</a>
-             {{ end }}
-           {{ end }}
-         </li>
-       </ul>
-     </section>
-   </header>
+   {{ partial "post_header_list.html" . }}
    <section class='post-content'>
      {{.Content }}
    </section>
