--- a/layouts/resource/list.html
+++ b/layouts/resource/list.html
@@ -1,24 +1,3 @@
 {{ partial "top_list_resource.html" . }}
-
-{{ $paginator := .Paginate (where .Data.Pages ".Section" "resource") }}
-<div class='row'>
-  <div class='col-md-8'>
-    {{ partial "paginator.html" . }}
-{{ range $index, $element := $paginator.Pages }}
-
-<article class='post'>
-  {{ partial "post_header_list.html" . }}
-  <section class='post-content'>
-    {{.Content }}
-  </section>
-</article>
-
-{{ end }}
-
-{{ partial "paginator.html" . }}
-
-</div>
-{{ partial "side_menu_list.html" . }}
-</div>
-
+{{ partial "body_list.html" . }}
 {{ partial "bottom_list.html" . }}
