--- a/layouts/taxonomy/tag.html
+++ b/layouts/taxonomy/tag.html
@@ -1,24 +1,3 @@
-{{ partial "top_list_resource.html" . }}
-
- {{ $paginator := .Paginate .Data.Pages }}
- <div class='row'>
-   <div class='col-md-8'>
-     {{ partial "paginator.html" . }}
- {{ range $index, $element := $paginator.Pages }}
-
- <article class='post'>
-   {{ partial "post_header_list.html" . }}
-   <section class='post-content'>
-     {{.Content }}
-   </section>
- </article>
-
- {{ end }}
-
-{{ partial "paginator.html" . }}
-
- </div>
- {{ partial "side_menu_taxonomy.html" . }}
- </div>
-
- {{ partial "bottom_list.html" . }}
+{{ partial "top_list_taxonomy.html" . }}
+{{ partial "body_taxonomy.html" . }}
+{{ partial "bottom_list.html" . }}
