--- a/layouts/partials/draft.html
+++ b/layouts/partials/draft.html
@@ -6,6 +6,6 @@
   <p>There are many errors including and not limited to: spelling, grammatical, lack of ecosystem awareness
     understanding and plain ignorance.</p>
   <p>I am making it public to get feedback. You might completely disagree, you might agree violently. Either
-    way, teach me. I want to hear from you: (<a href="mailto:flear@flear.org">Email</a>, <a
-      href="https://twitter.com/@FLEAR_radio/">@FLEAR_radio</a>.)</p>
+    way, teach me. I want to hear from you: (<a href="mailto:{{ site.Params.siteEmail }}">Email</a>, <a
+      href="https://twitter.com/@{{ site.Params.twitterUser }}/">@{{ site.Params.twitterUser }}</a>.)</p>
 </div>
