--- a/layouts/partials/menu.html
+++ b/layouts/partials/menu.html
@@ -2,8 +2,8 @@
 	<div class="navbar__inner">
 		<div class="navbar__items navbar__items--left navbarItems_1xGM">
 			<a aria-current="page" class="navbar__brand active" href="/">
-				<img class="navbar__logo logo--light" src="/images/logo-header-light.png" alt="FLEAR">
-				<img class="navbar__logo logo--dark" src="/images/logo-header-dark.png" alt="FLEAR">
+				<img class="navbar__logo logo--light" src="/images/logo-header-light.png" alt="{{ site.Params.siteName }}">
+				<img class="navbar__logo logo--dark" src="/images/logo-header-dark.png" alt="{{ site.Params.siteName }}">
 			</a>
 			<div aria-label="Navigation bar toggle" class="navbar__toggle" role="button" tabindex="0">
 				<svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30" role="img" focusable="false">
