--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -10,7 +10,7 @@
         <strong>FLEAR</strong> &copy; 2023 to present
       </p>
       <p>
-        <a href='https://git.qoto.org/flear/flear-side'>Get source</a> by <a href='https://jeffreyfreeman.me'>Jeffrey Phillips Freeman</a>
+        <a href='https://git.qoto.org/flear/flear-site'>Get source</a> by <a href='https://jeffreyfreeman.me'>Jeffrey Phillips Freeman</a>
       </p>
     </div>
   </div>
