Handled a few more cases where hard-coded data was replaced with config variables

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -7,7 +7,7 @@
     </div>
     <div class='col-md-6 text-right'>
       <p>
-        <strong>FLEAR</strong> &copy; 2023 to present
+        <strong>Jeffrey Phillips Freeman</strong> &copy; 2023 to present
       </p>
       <p>
         <a href='https://git.qoto.org/flear/flear-site'>Get source</a> by <a href='https://jeffreyfreeman.me'>Jeffrey Phillips Freeman</a>
