--- a/layouts/partials/menu.html
+++ b/layouts/partials/menu.html
@@ -17,7 +17,7 @@
 			<a class="navbar__item navbar__link" href="/news">News</a>
 			<a class="navbar__item navbar__link" href="/projects">Projects</a>
       <a class="navbar__item navbar__link" href="/resource">Resources</a>
-			<a class="displayOnlyInLargeViewport_16CL button button--primary" href="https://git.qoto.org/flear" style="margin:0;margin-left:15px">FLEAR GITLAB →</a>
+			<a class="displayOnlyInLargeViewport_16CL button button--primary" href={{ site.Params.repoUrl }} style="margin:0;margin-left:15px">OUR GIT →</a>
 		</div>
 	</div>
 	<div role="presentation" class="navbar-sidebar__backdrop"></div>
@@ -44,7 +44,7 @@
 						<a class="menu__link" href="/resource">Resources</a>
 					</li>
 					<div style="margin:5px;margin-top:15px"></div>
-					<a class="button button--block button--primary" href="https://git.qoto.org/flear">OUR GITLAB →</a>
+					<a class="button button--block button--primary" href={{ site.Params.repoUrl }}>OUR GITLAB →</a>
 				</ul>
 			</div>
 		</div>
