--- a/layouts/partials/top_list_resource.html
+++ b/layouts/partials/top_list_resource.html
@@ -5,7 +5,7 @@
     <div class="main-wrapper">
       <header class='subheader'>
         <div class='container'>
-          <h2 class='page-title'> Resources <small>services, assistance, information, and other resources to assist the FLOSS Ham community.</small>
+          <h2 class='page-title'> Resources <small>services, assistance, information, and other resources to assist in contributing to the Fedipage project.</small>
           </h2>
         </div>
       </header>
