--- a/layouts/partials/top_list_news.html
+++ b/layouts/partials/top_list_news.html
@@ -5,7 +5,7 @@
     <div class="main-wrapper">
       <header class='subheader'>
         <div class='container'>
-          <h2 class='page-title'> News <small>For current events in FLEAR and its projects. You can follow this page on the fediverse at @flear@flear.org.</small>
+          <h2 class='page-title'> News <small>For current events related to Fedipage. You can follow this page on the fediverse at @fedipage@fedipage.com.</small>
           </h2>
         </div>
       </header>
