--- a/layouts/partials/top_list_projects.html
+++ b/layouts/partials/top_list_projects.html
@@ -5,7 +5,7 @@
     <div class="main-wrapper">
       <header class='subheader'>
         <div class='container'>
-          <h2 class='page-title'> Projects <small>Open source projects past of our incubator for Ham Radio.</small>
+          <h2 class='page-title'> Projects <small>Open source projects related to the fedipage project.</small>
           </h2>
         </div>
       </header>
