--- a/layouts/partials/microblog.html
+++ b/layouts/partials/microblog.html
@@ -1,6 +1,6 @@
 <div class='menu microblog'>
   <span class='menu-heading'> Microblog </span>
-  <iframe allowfullscreen sandbox="allow-top-navigation allow-scripts allow-popups allow-popups-to-escape-sandbox" style='border-width: 0' width='100%' height="800" src="https://www.mastofeed.com/apiv2/feed?userurl=https%3A%2F%2F{{ (urls.Parse site.Params.secondaryApHost).Hostname }}%2Fusers%2F{{ site.Params.secondaryApUser }}&theme=light&size=80&header=false&replies=false&boosts=false"></iframe>
+  {{ partial "microblog_iframe.html" . }}
   <div class="fill-vert"></div>
   <div class="more">
     <a class='btn btn-default btn-m pull-right' href='{{ site.Params.secondaryApHost }}/@{{ site.Params.secondaryApUser }}/' style='align:right;text-align: right;align-content:  right;'>More ... </a>
