Cleaned up the look of the microblog a bit

--- a/layouts/partials/microblog_iframe.html
+++ b/layouts/partials/microblog_iframe.html
@@ -1,1 +1,3 @@
-<iframe allowfullscreen sandbox="allow-top-navigation allow-scripts allow-popups allow-popups-to-escape-sandbox" width="400" height="800" src="https://www.mastofeed.com/apiv2/feed?userurl=https%3A%2F%2Fqoto.org%2Fusers%2FFedipage&theme=light&size=80&header=false&replies=false&boosts=false"></iframe>
+
+
+  <iframe allowfullscreen sandbox="allow-top-navigation allow-scripts allow-popups allow-popups-to-escape-sandbox" style='border-width: 0' width="100%" height="800" src="https://www.mastofeed.com/apiv2/feed?userurl=https%3A%2F%2Fqoto.org%2Fusers%2FFedipage&theme=light&size=80&header=false&replies=false&boosts=false"></iframe>
