--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,3 +1,3 @@
-{{ partial "top_home.html" }}
+{{ partial "top_home.html" . }}
 {{ .Content }}
-{{ partial "bottom_home.html" }}
+{{ partial "bottom_home.html" . }}
