--- a/layouts/shortcodes/card.html
+++ b/layouts/shortcodes/card.html
@@ -7,7 +7,7 @@ inner: description
 -->
 
 <div class="col">
-  <a class="card" href="{{ .Get 1 }}">
+  <a class="card" {{ if .Get 1 }}href="{{ .Get 1 }}"{{ end }}>
     <div class="card__body">
       <h3 style="margin:0;text-transform:capitalize">{{ .Get 0 }}</h3>
       <small>{{ .Inner }}</small>
