Made things more generic

--- a/layouts/partials/top_list_generic.html
+++ b/layouts/partials/top_list_generic.html
@@ -5,7 +5,7 @@
     <div class="main-wrapper">
       <header class='subheader'>
         <div class='container'>
-          <h2 class='page-title'> Fedipage <small>Hugo based static page genedator and blog with ActivityPub support</small>
+          <h2 class='page-title'> {{ .Title }}
           </h2>
         </div>
       </header>
