--- a/layouts/partials/menu.html
+++ b/layouts/partials/menu.html
@@ -14,10 +14,10 @@
 		</div>
 		<div class="navbar__items navbar__items--right">
 			<a class="navbar__item navbar__link" href="/">Home</a>
-			<a class="navbar__item navbar__link" href="/news">News</a>
-			<a class="navbar__item navbar__link" href="/projects">Projects</a>
-      <a class="navbar__item navbar__link" href="/resource">Resources</a>
-			<a class="displayOnlyInLargeViewport_16CL button button--primary" href={{ site.Params.repoUrl }} style="margin:0;margin-left:15px">OUR GIT →</a>
+			{{ range .Site.Sections }}
+			  <a class="navbar__item navbar__link" href="{{ .Permalink }}">{{ .Title }}</a>
+			{{ end }}
+			<a class="displayOnlyInLargeViewport_16CL button button--primary" href={{ site.Params.repoUrl }} style="margin:0;margin-left:15px">MY GIT →</a>
 		</div>
 	</div>
 	<div role="presentation" class="navbar-sidebar__backdrop"></div>
@@ -34,17 +34,13 @@
 					<li class="menu__list-item">
 						<a class="menu__link" href="/">Home</a>
 					</li>
-					<li class="menu__list-item">
-						<a class="menu__link" href="/news">News</a>
-					</li>
-					<li class="menu__list-item">
-						<a class="menu__link" href="/projects">Projects</a>
-					</li>
-          <li class="menu__list-item">
-						<a class="menu__link" href="/resource">Resources</a>
-					</li>
+					{{ range .Site.Sections }}
+						<li class="menu__list-item">
+							<a class="menu__link" href="{{ .Permalink }}">{{ .Title }}</a>
+						</li>
+					{{ end }}
 					<div style="margin:5px;margin-top:15px"></div>
-					<a class="button button--block button--primary" href={{ site.Params.repoUrl }}>OUR GITLAB →</a>
+					<a class="button button--block button--primary" href={{ site.Params.repoUrl }}>MY GIT →</a>
 				</ul>
 			</div>
 		</div>
