Made adding sections much easier

--- a/layouts/partials/top_list_taxonomy.html
+++ b/layouts/partials/top_list_taxonomy.html
@@ -5,7 +5,7 @@
     <div class="main-wrapper">
       <header class='subheader'>
         <div class='container'>
-          <h2 class='page-title'> Categories <small> a listing of all the topics we cover organized in one place.</small>
+          <h2 class='page-title'> Categories <small> A listing of all the topics we cover organized in one place.</small>
           </h2>
         </div>
       </header>
