--- a/layouts/partials/top_list_generic.html
+++ b/layouts/partials/top_list_generic.html
@@ -5,7 +5,7 @@
     <div class="main-wrapper">
       <header class='subheader'>
         <div class='container'>
-          <h2 class='page-title'> {{ .Title }}
+          <h2 class='page-title'> {{ .Title }}{{ if .Description }} <small>{{ .Description }}</small>{{ end }}
           </h2>
         </div>
       </header>
